<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="freedomhub_title">#LetsAIMify</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="misc_category">Miscs</string>
    <string name="buttons_category">Buttons</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="interface_category">Interface</string>
    <string name="notifications_ui">Notifications</string>
   <string name="general_mods">General Mods</string>
    <string name="traffic_title">Traffic Indicators</string>
    <string name="recents_ui_title">Recents UI</string>
     <string name="aim_animation">Animation</string>
     <string name="animation_settings">Animation Customizations</string>
    <string name="general_navigation_category">Navigation Bar</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="app_ops_category">App Ops</string>
    <string name="freedomhub_dialog_title">Help us help you!</string>
    <string name="freedomhub_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="freedomhub_dialog_toast">READ THE WHOLE THING!</string>
    <string name="toast_icon_title">App\'s icon in toast</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="brightness_icon_title">Auto brightness icon</string>
    <string name="brightness_icon_summary">Show a brightness icon to the right of the brightness slider to toggle auto-brightness</string>
    <string name="slim_recents_title">Slim recents</string>
    <string name="use_slim_recents_title">Use alternative recents panel</string>
    <string name="use_slim_recents_summary">Use Slim Recents instead of the default recents view</string>
    <string name="slim_recents_settings_title">Slim recents settings</string>
    <string name="slim_recents_settings_summary">View the settings for Slim Recents</string>
    <string name="recents_max_apps_title">Max allowed apps</string>
    <string name="recent_panel_scale_title">Size</string>
    <string name="recent_panel_expanded_mode_title">Previews expanded mode</string>
    <string name="recent_panel_expanded_mode_summary">Recent tasks expanded preview mode</string>
    <string name="recent_panel_expanded_mode_auto">Auto (default)</string>
    <string name="recent_panel_expanded_mode_always">All previews</string>
    <string name="recent_panel_expanded_mode_never">Off (fast engine mode)</string>
    <string name="recent_panel_bg_color_title">Panel background color</string>
    <string name="recent_card_bg_color_title">Card background color</string>
    <string name="recent_reset_title">Reset to stock color</string>
    <string name="recent_reset_confirm">Are you sure you want to reset Slim Recent to stock color?</string>
    <string name="default_auto_string">Default (app based)</string>
    <string name="slim_icon_pack_title">Icon Pack</string>
    <string name="slim_icon_pack_summary">Apply a custom icon pack for apps in the panel</string>
    <string name="slim_recents_corner_radius_title">Use round corners for cards</string>
    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
    <string name="slim_blacklist_apps_cat_title">Blacklist</string>
    <string name="slim_blacklist_apps_title">Apps blacklist</string>
    <string name="slim_blacklist_apps_summary">Apps to not show in the panel</string>
    <string name="slim_blacklist_add_apps_title">Add app</string>
    <string name="slim_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="fling_double_left_tap">Double tap left</string>
    <string name="fling_long_left_press">Long press left</string>
    <string name="long_swipe_portrait_title">Portrait</string>
    <string name="long_swipe_landscape_title">Landscape</string>
    <string name="portrait_right_swipe_title">Portrait right swipe</string>
    <string name="portrait_left_swipe_title">Portrait left swipe</string>
    <string name="landscape_right_swipe_title">Landscape right swipe</string>
    <string name="landscape_left_swipe_title">Landscape left swipe</string>
    <string name="vertical_up_swipe_title">Vertical up swipe</string>
    <string name="vertical_down_swipe_title">Vertical down swipe</string>
    <string name="up_swipe_title">Up swipe</string>
    <string name="down_swipe_title">Down swipe</string>
    <string name="long_swipe_reset">Reset</string>
    <string name="fling_advanced">Advanced</string>
    <string name="fling_long_swipe_title">Long swipe thresholds</string>
    <string name="fling_long_swipe_summary">Fine tune long swipe thresholds based on a percentage of Fling interface width or height</string>
    <string name="fling_trails_enable_title">Enable gesture trails</string>
    <string name="fling_trails_enable_summary">Show a trail on swipe gestures</string>
    <string name="fling_trails_color_title">Trail color</string>
    <string name="fling_trails_width_title">Trail width</string>
    <string name="fling_appearance">Appearance</string>
    <string name="fling_show_logo_title">Show Fling logo</string>
    <string name="fling_animate_logo_title">Animate logo</string>
    <string name="fling_animate_logo_summary">Logo animates on touch events</string>
    <string name="fling_logo_color">Logo color</string>
    <string name="fling_logo_custom_logo_pick_title">Custom logo icon</string>
    <string name="fling_logo_custom_logo_image_pick_title">Custom logo image</string>
    <string name="fling_logo_custom_logo_reset_title">Reset logo icon</string>
    <string name="fling_show_ripple_title">Show ripple</string>
    <string name="fling_show_ripple_summary">Ripple effect on touch events</string>
    <string name="fling_ripple_color">Ripple color</string>
    <string name="fling_longpress_timeout_label_left">Less delay</string>
    <string name="fling_longpress_timeout_label_right">More delay</string>
    <string name="fling_longpress_title">Long press delay</string>
    <string name="fling_longpress_summary">Increase or decrease the time it takes to execute a long press</string>
    <string name="fling_keyboard_cursors_title">Dynamic keyboard cursors action</string>
</resources>