<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Aimrom project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

<PreferenceCategory
        android:key="light_category"
        android:title="@string/light_category">

     <Preference
         android:key="battery_charging_light"
         android:fragment="com.aim.freedomhub.BatteryLightSettings"
         android:title="@string/battery_light_settings" />


    </PreferenceCategory>

 <PreferenceCategory
        android:key="sound_category"
        android:title="@string/sound_category">

     <PreferenceScreen
           android:key="volume_settings"
         android:fragment="com.aim.freedomhub.categories.volume"
         android:title="@string/sound_settings" />

    </PreferenceCategory>



<com.aim.freedomhhub.preference.SystemSettingSwitchPreference
             android:key="toast_icon"
             android:title="@string/toast_icon_title"
             android:summary="@string/toast_icon_summary"
             android:defaultValue="false" />

</PreferenceScreen>
